[package]
name = "flasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = {version = "4.3.0", default-features = false}
rfd = "0.14.1"
colored = "2.1.0"
indicatif = "0.17.8"
terminal-menu = "3.0.0"
clearscreen = "3.0.0"